<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.openecard</groupId>
		<artifactId>packager</artifactId>
		<version>1.3.1-SNAPSHOT</version>
	</parent>

	<groupId>org.openecard.clients</groupId>
	<artifactId>richclient-packager</artifactId>
	<packaging>pom</packaging>
	<name>Rich Client (Packager)</name>


	<properties>
		<maven.compiler.release>11</maven.compiler.release>
	</properties>


	<repositories>
		<repository>
			<id>openecard-repos</id>
			<name>Openecard Repos</name>
			<url>https://mvn.ecsec.de/repository/openecard-public</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>openecard-repos</id>
			<url>https://mvn.ecsec.de/repository/openecard-public</url>
		</pluginRepository>
	</pluginRepositories>


	<profiles>
		<profile>
			<id>app-bundles-Linux</id>
			<activation>
				<os>
					<family>Unix</family>
				</os>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>net.agilhard.maven.plugins</groupId>
						<artifactId>jlink-jpackager-maven-plugin</artifactId>
						<version>1.0.0-SNAPSHOT</version>
						<configuration>
							<icon>${project.basedir}/src/main/resources/linux/Open-eCard-App.png</icon>
							<resourceDir>${project.basedir}/src/main/resources/linux</resourceDir>
							<type>deb</type>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>app-bundles-win</id>
			<activation>
				<os>
					<family>Windows</family>
					<arch>x86</arch>
				</os>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>net.agilhard.maven.plugins</groupId>
						<artifactId>jlink-jpackager-maven-plugin</artifactId>
						<version>1.0.0-SNAPSHOT</version>
						<configuration>
							<icon>${project.basedir}/src/main/resources/windows/Open-eCard-App.ico</icon>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>app-bundles-mac</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>net.agilhard.maven.plugins</groupId>
						<artifactId>jlink-jpackager-maven-plugin</artifactId>
						<version>1.0.0-SNAPSHOT</version>
						<configuration>
							<icon>${project.basedir}/src/main/resources/mac-os/Open-eCard-App.icns</icon>
							<resourceDir>${project.basedir}/src/main/resources/mac-os</resourceDir>
							<type>dmg</type>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>


	<build>
		<plugins>
			<!-- Maven compiler plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<showDeprecation>true</showDeprecation>
					<showWarnings>true</showWarnings>
					<debug>true</debug>
					<debuglevel>source,lines,vars</debuglevel>
					<optimize>false</optimize>
				</configuration>
				<executions>
					<execution>
						<id>default-compile</id>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Skip install step of install-plugin-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
			<!-- Jpackage plugin to create installers -->
			<plugin>
				<groupId>net.agilhard.maven.plugins</groupId>
				<artifactId>jlink-jpackager-maven-plugin</artifactId>
				<version>1.0.0-SNAPSHOT</version>
				<extensions>true</extensions>
				<executions>
					<execution>
						<id>jlink</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>jlink</goal>
						</goals>
						<configuration>
							<!-- JLink arguments -->
							<launcher>open-ecard=org.openecard.richclient/org.openecard.richclient.RichClient</launcher>
							<compress>2</compress>
							<noHeaderFiles>true</noHeaderFiles>
							<noManPages>true</noManPages>
							<stripDebug>true</stripDebug>
							<ignoreSigningInformation>true</ignoreSigningInformation>
							<outputDirectoryImage>${project.build.directory}/open-ecard</outputDirectoryImage>
							<jdkToolchain>
								<version>11</version>
							</jdkToolchain>
						</configuration>
					</execution>
					<execution>
						<id>jpackage</id>
						<phase>package</phase>
						<goals>
							<goal>jpackager</goal>
						</goals>
						<configuration>
							<!-- Jpackage arguments -->
							<!-- Don't use spaces in application name, because of problems with install scripts ... -->
							<name>open-ecard</name>
							<identifier>org.openecard.richclient</identifier>
							<appVersion>${project.version}</appVersion>
							<module>org.openecard.richclient/org.openecard.richclient.RichClient</module>
							<jdkToolchain>
								<version>[14,)</version>
							</jdkToolchain>
							<runtimeImage>${project.build.directory}/open-ecard</runtimeImage>
							<skipModulesInclude>true</skipModulesInclude>
							<!-- JVM arguments of the application -->
							<arguments>
								<argument>-XX:-UsePerfData</argument>
								<argument>-XX:-Inline</argument>
								<argument>-XX:+AggressiveOpts</argument>
								<argument>-Xms16m</argument>
								<argument>-Xmx64m</argument>
								<argument>-XX:+UseG1GC</argument>
								<argument>-XX:MinHeapFreeRatio=1</argument>
								<argument>-XX:MaxHeapFreeRatio=5</argument>
								<argument>-XX:G1ReservePercent=5</argument>
								<argument>-Djavax.xml.stream.isSupportingExternalEntities=false</argument>
								<argument>-Djavax.xml.stream.supportDTD=false</argument>
							</arguments>
							<!-- Application package metadata -->
							<vendor>ecsec GmbH</vendor>
							<description>Client side implementation of the eCard-API-Framework (BSI TR-03112)</description>
							<licenseFile>${project.basedir}/src/main/resources/licenses/LICENSE.GPL</licenseFile>
							<copyright>2019 ecsec GmbH</copyright>
							<linuxOptions>
								<bundleName>open-ecard</bundleName>
								<debMaintainer>tobias.wich@ecsec.de</debMaintainer>
								<rpmLicenseType>GPL v3</rpmLicenseType>
								<menuGroup>Network;</menuGroup>
								<packageDeps>pcscd</packageDeps>
							</linuxOptions>
							<macOptions>
								<bundleName>Open eCard</bundleName>
								<bundleIdentifier>org.openecard.richclient</bundleIdentifier>
							</macOptions>
							<windowsOptions>
								<dirChooser>true</dirChooser>
								<menuGroup>misc</menuGroup>
							</windowsOptions>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<!-- Open eCard RichClient Bundle -->
		<dependency>
			<groupId>org.openecard.clients</groupId>
			<artifactId>richclient-bundle</artifactId>
			<version>${project.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.openecard.clients</groupId>
					<artifactId>richclient</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- JavaFX -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-swing</artifactId>
		</dependency>

		<!-- BouncyCastle -->
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcprov-jdk15on</artifactId>
		</dependency>
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bctls-jdk15on</artifactId>
		</dependency>
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcpkix-jdk15on</artifactId>
		</dependency>

		<!-- JAXB -->
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<exclusions>
				<exclusion>
					<groupId>jakarta.activation</groupId>
					<artifactId>jakarta.activation-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.sun.activation</groupId>
			<artifactId>jakarta.activation</artifactId>
			<version>1.2.2-20190731</version>
		</dependency>
	</dependencies>

</project>
